--- a/src/util/Makefile-depend
+++ b/src/util/Makefile-depend
@@ -2,7 +2,7 @@ $(OBJ)/graph.o : graph.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/vehicle.h $(INCLUDE)/fight.h $(INCLUDE)/char_class.h 
 	$(CXX) -c $(CXXFLAGS) graph.cc             -o $(OBJ)/graph.o
 $(OBJ)/handler.o : handler.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/spells.h $(INCLUDE)/screen.h $(INCLUDE)/vehicle.h $(INCLUDE)/vendor.h $(INCLUDE)/clan.h $(INCLUDE)/smokes.h $(INCLUDE)/materials.h $(INCLUDE)/login.h $(INCLUDE)/char_class.h $(INCLUDE)/help.h $(INCLUDE)/fight.h $(INCLUDE)/security.h $(INCLUDE)/tmpstr.h $(INCLUDE)/utils.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/spells.h $(INCLUDE)/screen.h $(INCLUDE)/vehicle.h $(INCLUDE)/vendor.h $(INCLUDE)/clan.h $(INCLUDE)/smokes.h $(INCLUDE)/materials.h $(INCLUDE)/login.h $(INCLUDE)/char_class.h $(INCLUDE)/help.h $(INCLUDE)/fight.h $(INCLUDE)/security.h $(INCLUDE)/tmpstr.h $(INCLUDE)/utils.h $(INCLUDE)/vendor.h 
 	$(CXX) -c $(CXXFLAGS) handler.cc           -o $(OBJ)/handler.o
 $(OBJ)/memtrack.o : memtrack.cc \
 	$(INCLUDE)/utils.h 
