Account information is now loaded from a postgres database, and updated on the fly.
New functions:
char *tmp_ctime(time_t val)
	returns tmpstr representation of time.

char *tmp_sqlescape(const char *str)
	return tmpstr copy of string with sql escapes added - needed
	for user-input to sql statements

bool sql_exec(const char *str)
	performs sql command, returning true if command was successful.  slogs
	sql errors automatically.

PGresult *sql_query(const char *query)
	performs sql query, returning the result of the query.  The result must
	be disposed of using PQclear() afterwards.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXX=g++
 INCLUDE=include
-CCFLAGS=-g -Wall -Winline -Wcast-qual -I/usr/include/libxml2
+CCFLAGS=-g -Wall -Winline -Wcast-qual -I/usr/include/libxml2 -I/usr/local/pgsql/include
 CXXFLAGS=$(CCFLAGS) -I$(INCLUDE)
 
 SUBDIRS= \
@@ -11,7 +11,7 @@ SUBDIRS= \
 
 MAKEFLAGS=-s -k 4 $(PARALLEL_MAKE)
 OBJ=ObjFiles
-LIBS=-lcrypt -lxml2
+LIBS=-L/usr/local/pgsql/lib -lcrypt -lxml2 -lpq
 EXE=../bin/circle
 
 default all:
