Added -I/usr/include/pgsql to Makefile so it would compile on my system
new who list option -g, when used by immortals, show gen for players

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXX=g++
 INCLUDE=include
-CCFLAGS=-g -Wall -Winline -Wcast-qual -I/usr/include/libxml2 -I/usr/local/pgsql/include
+CCFLAGS=-g -Wall -Winline -Wcast-qual -I/usr/include/libxml2 -I/usr/local/pgsql/include -I/usr/include/pgsql
 CXXFLAGS=$(CCFLAGS) -I$(INCLUDE)
 
 SUBDIRS= \
