--- a/src/objects/Makefile-depend
+++ b/src/objects/Makefile-depend
@@ -1,5 +1,5 @@
 $(OBJ)/boards.o : boards.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/boards.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/screen.h $(INCLUDE)/clan.h $(INCLUDE)/security.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/boards.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/screen.h $(INCLUDE)/clan.h $(INCLUDE)/accstr.h $(INCLUDE)/security.h 
 	$(CXX) -c $(CXXFLAGS) boards.cc            -o $(OBJ)/boards.o
 $(OBJ)/bomb.o : bomb.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/screen.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/flow_room.h $(INCLUDE)/bomb.h $(INCLUDE)/fight.h $(INCLUDE)/house.h $(INCLUDE)/char_class.h 
