We now have 34 unique and swell languages in Tempus.  This commit inclues full control of a creatures known languages via olc and wizcommands.  Mob support is also included...

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ SUBDIRS= \
 	clan classes combat db dyntext editor \
 	events flow_room help house interpreter magic \
 	misc mobiles net objects olc quest search \
-	social specials util weather structs map
+	social specials util weather structs map language
 
 MAKEFLAGS=-s -k 4 $(PARALLEL_MAKE)
 OBJ=ObjFiles
