--- a/src/db/Makefile-depend
+++ b/src/db/Makefile-depend
@@ -8,7 +8,7 @@ $(OBJ)/constants.o : constants.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/spells.h 
 	$(CXX) -c $(CXXFLAGS) constants.cc         -o $(OBJ)/constants.o
 $(OBJ)/db.o : db.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/constants.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/spells.h $(INCLUDE)/mail.h $(INCLUDE)/interpreter.h $(INCLUDE)/house.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/clan.h $(INCLUDE)/paths.h $(INCLUDE)/quest.h $(INCLUDE)/char_class.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/help.h $(INCLUDE)/combat.h $(INCLUDE)/tmpstr.h $(INCLUDE)/flags.h $(INCLUDE)/player_table.h $(INCLUDE)/account.h $(INCLUDE)/specs.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/constants.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/spells.h $(INCLUDE)/mail.h $(INCLUDE)/interpreter.h $(INCLUDE)/house.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/clan.h $(INCLUDE)/paths.h $(INCLUDE)/quest.h $(INCLUDE)/char_class.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/help.h $(INCLUDE)/combat.h $(INCLUDE)/tmpstr.h $(INCLUDE)/flags.h $(INCLUDE)/player_table.h $(INCLUDE)/account.h $(INCLUDE)/specs.h $(INCLUDE)/language.h 
 	$(CXX) -c $(CXXFLAGS) db.cc                -o $(OBJ)/db.o
 $(OBJ)/obj_matcher.o : obj_matcher.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/specs.h $(INCLUDE)/comm.h $(INCLUDE)/materials.h $(INCLUDE)/obj_matcher.h $(INCLUDE)/interpreter.h $(INCLUDE)/screen.h $(INCLUDE)/tmpstr.h 
