--- a/src/olc/Makefile-depend
+++ b/src/olc/Makefile-depend
@@ -1,8 +1,8 @@
 $(OBJ)/olc.o : olc.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/spells.h $(INCLUDE)/materials.h $(INCLUDE)/vehicle.h $(INCLUDE)/specs.h $(INCLUDE)/smokes.h $(INCLUDE)/paths.h $(INCLUDE)/bomb.h $(INCLUDE)/guns.h $(INCLUDE)/char_class.h $(INCLUDE)/events.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/spells.h $(INCLUDE)/materials.h $(INCLUDE)/vehicle.h $(INCLUDE)/specs.h $(INCLUDE)/smokes.h $(INCLUDE)/paths.h $(INCLUDE)/bomb.h $(INCLUDE)/guns.h $(INCLUDE)/char_class.h $(INCLUDE)/events.h $(INCLUDE)/language.h 
 	$(CXX) -c $(CXXFLAGS) olc.cc               -o $(OBJ)/olc.o
 $(OBJ)/olc_mob.o : olc_mob.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/creature_list.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/char_class.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/specs.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/creature_list.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/char_class.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/specs.h $(INCLUDE)/language.h 
 	$(CXX) -c $(CXXFLAGS) olc_mob.cc           -o $(OBJ)/olc_mob.o
 $(OBJ)/olc_obj.o : olc_obj.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/spells.h $(INCLUDE)/materials.h $(INCLUDE)/specs.h $(INCLUDE)/player_table.h 
