--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -1,6 +1,9 @@
 $(OBJ)/artisan.o : artisan.cc \
 	$(INCLUDE)/db.h $(INCLUDE)/structs.h $(INCLUDE)/xml_utils.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/actions.h $(INCLUDE)/char_class.h $(INCLUDE)/comm.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/handler.h $(INCLUDE)/security.h $(INCLUDE)/vendor.h 
 	$(CXX) -c $(CXXFLAGS) artisan.cc           -o $(OBJ)/artisan.o
+$(OBJ)/cityguard.o : cityguard.cc \
+	$(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/fight.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/utils.h 
+	$(CXX) -c $(CXXFLAGS) cityguard.cc         -o $(OBJ)/cityguard.o
 $(OBJ)/guard.o : guard.cc \
 	$(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/fight.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/utils.h 
 	$(CXX) -c $(CXXFLAGS) guard.cc             -o $(OBJ)/guard.o
@@ -13,4 +16,4 @@ $(OBJ)/mobact.o : mobact.cc \
 $(OBJ)/vendor.o : vendor.cc \
 	$(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/weather.h $(INCLUDE)/utils.h $(INCLUDE)/vendor.h $(INCLUDE)/specs.h 
 	$(CXX) -c $(CXXFLAGS) vendor.cc            -o $(OBJ)/vendor.o
-OBJFILES= $(OBJ)/artisan.o $(OBJ)/guard.o $(OBJ)/mail.o $(OBJ)/mobact.o $(OBJ)/vendor.o
+OBJFILES= $(OBJ)/artisan.o $(OBJ)/cityguard.o $(OBJ)/guard.o $(OBJ)/mail.o $(OBJ)/mobact.o $(OBJ)/vendor.o
