Gold and cash are now randomized, severely slowing down boot time. :/ Sorry about the depends.

--- a/src/olc/Makefile-depend
+++ b/src/olc/Makefile-depend
@@ -1,11 +1,11 @@
 $(OBJ)/olc.o : olc.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/spells.h $(INCLUDE)/materials.h $(INCLUDE)/vehicle.h $(INCLUDE)/specs.h $(INCLUDE)/smokes.h $(INCLUDE)/paths.h $(INCLUDE)/bomb.h $(INCLUDE)/guns.h $(INCLUDE)/char_class.h $(INCLUDE)/events.h $(INCLUDE)/language.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/spells.h $(INCLUDE)/materials.h $(INCLUDE)/vehicle.h $(INCLUDE)/specs.h $(INCLUDE)/smokes.h $(INCLUDE)/paths.h $(INCLUDE)/bomb.h $(INCLUDE)/guns.h $(INCLUDE)/char_class.h $(INCLUDE)/events.h $(INCLUDE)/language.h $(INCLUDE)/mobile_map.h 
 	$(CXX) -c $(CXXFLAGS) olc.cc               -o $(OBJ)/olc.o
 $(OBJ)/olc_mob.o : olc_mob.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/creature_list.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/char_class.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/specs.h $(INCLUDE)/language.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/creature_list.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/char_class.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/specs.h $(INCLUDE)/language.h $(INCLUDE)/mobile_map.h 
 	$(CXX) -c $(CXXFLAGS) olc_mob.cc           -o $(OBJ)/olc_mob.o
 $(OBJ)/olc_obj.o : olc_obj.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/spells.h $(INCLUDE)/materials.h $(INCLUDE)/specs.h $(INCLUDE)/player_table.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/spells.h $(INCLUDE)/materials.h $(INCLUDE)/specs.h $(INCLUDE)/player_table.h $(INCLUDE)/object_map.h 
 	$(CXX) -c $(CXXFLAGS) olc_obj.cc           -o $(OBJ)/olc_obj.o
 $(OBJ)/olc_srch.o : olc_srch.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/spells.h $(INCLUDE)/materials.h 
@@ -14,7 +14,7 @@ $(OBJ)/olc_wld.o : olc_wld.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/clan.h $(INCLUDE)/specs.h $(INCLUDE)/house.h $(INCLUDE)/tmpstr.h $(INCLUDE)/player_table.h 
 	$(CXX) -c $(CXXFLAGS) olc_wld.cc           -o $(OBJ)/olc_wld.o
 $(OBJ)/olc_zon.o : olc_zon.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/paths.h $(INCLUDE)/player_table.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/paths.h $(INCLUDE)/player_table.h $(INCLUDE)/mobile_map.h 
 	$(CXX) -c $(CXXFLAGS) olc_zon.cc           -o $(OBJ)/olc_zon.o
 $(OBJ)/polc.o : polc.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/olc.h 
